force-app/main/default/objects/Solution__c/Solution__c.object-meta.xml
<CustomObject>
    <label>Solution(c)</label>
    <nameField>
        <displayFormat>SOL-{YYYY}{MM}{00000}</displayFormat>
        <label>Solution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution(c)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>