force-app/main/default/objects/Solution__c/fields/Biz_Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Biz_Attribute_Code__c</fullName>
    <formula>BizAttribute__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biz. Attribute Code</label>
    <type>Text</type>
</CustomField>