force-app/main/default/objects/Solution__c/fields/BizAttribute__c.field-meta.xml
<CustomField>
    <fullName>BizAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz. Attribute(IF)</label>
    <referenceTo>BizAttribute__c</referenceTo>
    <relationshipLabel>Solution(c)</relationshipLabel>
    <relationshipName>Solution_c</relationshipName>
    <type>Lookup</type>
</CustomField>