force-app/main/default/objects/Solution__c/fields/BizAttributeBackup__c.field-meta.xml
<CustomField>
    <fullName>BizAttributeBackup__c</fullName>
    <description>SAP전송 bizAttribute 코드 백업</description>
    <label>BizAttributeBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>