force-app/main/default/objects/Solution__c/fields/BizAttributeNmBackup__c.field-meta.xml
<CustomField>
    <fullName>BizAttributeNmBackup__c</fullName>
    <label>BizAttributeNmBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>