force-app/main/default/objects/Solution__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>Business Type(IF)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>