force-app/main/default/objects/Solution__c/fields/DeletionFlag__c.field-meta.xml
<CustomField>
    <fullName>DeletionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletion Flag(IF)</label>
    <type>Checkbox</type>
</CustomField>