force-app/main/default/objects/Solution__c/fields/DeliveryDepartment__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDepartment__c</fullName>
    <formula>Service__r.DeliveryDepartment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Department</label>
    <type>Text</type>
</CustomField>