force-app/main/default/objects/Solution__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Solution(c)</relationshipLabel>
    <relationshipName>Solution_c</relationshipName>
    <type>Lookup</type>
</CustomField>