force-app/main/default/objects/Solution__c/fields/OwnerDept__c.field-meta.xml
<CustomField>
    <fullName>OwnerDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Department</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Solution(c)</relationshipLabel>
    <relationshipName>Solution_c</relationshipName>
    <type>Lookup</type>
</CustomField>