force-app/main/default/objects/Solution__c/fields/PLCStatus__c.field-meta.xml
<CustomField>
    <fullName>PLCStatus__c</fullName>
    <formula>Text(Solution__r.PLCStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLC Status(IF)</label>
    <type>Text</type>
</CustomField>