force-app/main/default/objects/Solution__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <label>Project Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>