force-app/main/default/objects/Solution__c/fields/PSType__c.field-meta.xml
<CustomField>
    <fullName>PSType__c</fullName>
    <label>PSType(IF)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>