force-app/main/default/objects/Solution__c/fields/SalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartment__c</fullName>
    <formula>Service__r.SalesDepartment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Department</label>
    <type>Text</type>
</CustomField>