force-app/main/default/objects/Solution__c/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Perpetual</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Subscription</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>