force-app/main/default/objects/Solution__c/fields/SAP_SendTime__c.field-meta.xml
<CustomField>
    <fullName>SAP_SendTime__c</fullName>
    <label>SAP SendTime</label>
    <type>DateTime</type>
</CustomField>