force-app/main/default/objects/Solution__c/fields/sBizAttribute__c.field-meta.xml
<CustomField>
    <fullName>sBizAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz. Attribute</label>
    <referenceTo>BizAttribute__c</referenceTo>
    <relationshipLabel>Solution(c) (Biz. Attribute)</relationshipLabel>
    <relationshipName>sBizAttribute</relationshipName>
    <type>Lookup</type>
</CustomField>