force-app/main/default/objects/Solution__c/fields/sBusinessType__c.field-meta.xml
<CustomField>
    <fullName>sBusinessType__c</fullName>
    <label>Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>