force-app/main/default/objects/Solution__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution(IF)</label>
    <referenceTo>Master_Solution__c</referenceTo>
    <relationshipLabel>Solution(c)</relationshipLabel>
    <relationshipName>Solution_c</relationshipName>
    <type>Lookup</type>
</CustomField>