force-app/main/default/objects/Solution__c/fields/Solution_Code__c.field-meta.xml
<CustomField>
    <fullName>Solution_Code__c</fullName>
    <formula>Solution__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Code</label>
    <type>Text</type>
</CustomField>