force-app/main/default/objects/Solution__c/fields/SolutionBackup__c.field-meta.xml
<CustomField>
    <fullName>SolutionBackup__c</fullName>
    <description>SAP전송한 솔루션코드 백업</description>
    <label>SolutionBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>