force-app/main/default/objects/Solution__c/fields/SolutionNmBackup__c.field-meta.xml
<CustomField>
    <fullName>SolutionNmBackup__c</fullName>
    <description>Solution명 백업</description>
    <label>SolutionNmBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>