force-app/main/default/objects/Solution__c/fields/SolutionType__c.field-meta.xml
<CustomField>
    <fullName>SolutionType__c</fullName>
    <formula>Text(Solution__r.SolutionType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Type(IF)</label>
    <type>Text</type>
</CustomField>