force-app/main/default/objects/Solution__c/fields/SolutionTypeBackup__c.field-meta.xml
<CustomField>
    <fullName>SolutionTypeBackup__c</fullName>
    <label>SolutionTypeBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>