force-app/main/default/objects/Solution__c/fields/sPLCStatus__c.field-meta.xml
<CustomField>
    <fullName>sPLCStatus__c</fullName>
    <formula>Text(sSolution__r.PLCStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLCStatus</label>
    <type>Text</type>
</CustomField>