force-app/main/default/objects/Solution__c/fields/sPSType__c.field-meta.xml
<CustomField>
    <fullName>sPSType__c</fullName>
    <label>PSType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>