force-app/main/default/objects/Solution__c/fields/sSolution__c.field-meta.xml
<CustomField>
    <fullName>sSolution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution</label>
    <referenceTo>Master_Solution__c</referenceTo>
    <relationshipLabel>Solution(c) (sSolution)</relationshipLabel>
    <relationshipName>Solution_c1</relationshipName>
    <type>Lookup</type>
</CustomField>