force-app/main/default/objects/Solution__c/fields/sSolutionType__c.field-meta.xml
<CustomField>
    <fullName>sSolutionType__c</fullName>
    <formula>Text(sSolution__r.SolutionType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Type</label>
    <type>Text</type>
</CustomField>