force-app/main/default/objects/Solution__c/fields/SvcWBSCode__c.field-meta.xml
<CustomField>
    <fullName>SvcWBSCode__c</fullName>
    <description>서비스코드(서비스WBSCode)</description>
    <formula>LEFT(SUBSTITUTE(WBSCode__c, &apos;-&apos;,&apos;&apos;), 15)</formula>
    <label>SvcWBSCode</label>
    <type>Text</type>
</CustomField>