force-app/main/default/objects/Solution__c/fields/sWBSClass__c.field-meta.xml
<CustomField>
    <fullName>sWBSClass__c</fullName>
    <label>WBS Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>