force-app/main/default/objects/Solution__c/fields/UseYn__c.field-meta.xml
<CustomField>
    <fullName>UseYn__c</fullName>
    <formula>sSolution__r.Use__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UseYn</label>
    <type>Checkbox</type>
</CustomField>