force-app/main/default/objects/Solution__c/fields/WBSClass__c.field-meta.xml
<CustomField>
    <fullName>WBSClass__c</fullName>
    <label>WBS Class(IF)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>